[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/MenuButton.gd" type="Script" id=1]
[ext_resource path="res://resources/little_theme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/m3x6.tres" type="DynamicFont" id=3]

[node name="MenuButton" type="Node2D"]
script = ExtResource( 1 )
size = Vector2( 3, 1 )

[node name="Light" type="ColorRect" parent="."]
margin_right = 135.0
margin_bottom = 45.0
color = Color( 0.329412, 0.388235, 0.254902, 1 )

[node name="Shadow" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 135.0
margin_bottom = 45.0
color = Color( 0.172549, 0.227451, 0.219608, 1 )

[node name="Block" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 133.0
margin_bottom = 43.0
color = Color( 0.247059, 0.313726, 0.247059, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 2.0
margin_right = 135.0
margin_bottom = 45.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Button"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 135.0
margin_bottom = 45.0
focus_mode = 0
enabled_focus_mode = 0

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="visibility_changed" from="TextureButton" to="." method="_on_TextureButton_visibility_changed"]
